apps/rke2/stirling/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling
  namespace: stirling
  labels:
    app: stirling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling
  template:
    metadata:
      labels:
        app: stirling
    spec:
      containers:
      - name: stirling
        image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:latest
        ports:
        - name: http
          containerPort: 8080
