apps/rke2/stirling/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stirling
  namespace: stirling
spec:
  selector:
    app: stirling
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
